--- a/pdf_to_markdown.ipynb
+++ b/pdf_to_markdown.ipynb
@@ -55,7 +55,7 @@
       "source": [
         "import os\n",
         "\n",
-        "os.environ[\"LLAMA_CLOUD_API_KEY\"] = \"llx-Ve3Mri5dE8WnsfDLSBQkpihQ5VXWNiVyuJ2cwDRKSHUczxtE\""
+        "os.environ[\"LLAMA_CLOUD_API_KEY\"] = \"your_api_key\""
       ],
       "metadata": {
         "id": "aQkEgS6q4cfK"
@@ -68,11 +68,11 @@
       "source": [
         "from llama_parse import LlamaParse\n",
         "\n",
-        "document1 = LlamaParse(result_type=\"markdown\").load_data(\"/content/bom - Item Attribute Enquiry_71c580dfee9f44538497f2f960a7e4f2-141124-0815-1110.pdf\")\n",
-        "document2 = LlamaParse(result_type=\"markdown\").load_data(\"/content/bom - Manual Part Add_c51412f5bc33418c83f8d943ccb87920-141124-0814-1108.pdf\")\n",
-        "document3 = LlamaParse(result_type=\"markdown\").load_data(\"/content/bom - Onboarding a New Service_246f2f219e174df08b73b518f16443b4-141124-0816-1116.pdf\")\n",
-        "document4 = LlamaParse(result_type=\"markdown\").load_data(\"/content/prism - Architecture Principles and Guid_7a4775aa31c84486b39d11132375f6f5-141124-0813-1106.pdf\")\n",
-        "document5 = LlamaParse(result_type=\"markdown\").load_data(\"/content/prism - CM Adapter UI_42d4103c6f9740a7b8124fcceb6654db-141124-0815-1112.pdf\")"
+        "document1 = LlamaParse(result_type=\"markdown\").load_data(\"example1\")\n",
+        "document2 = LlamaParse(result_type=\"markdown\").load_data(\"example2\")\n",
+        "document3 = LlamaParse(result_type=\"markdown\").load_data(\"example3\")\n",
+        "document4 = LlamaParse(result_type=\"markdown\").load_data(\"example4\")\n",
+        "document5 = LlamaParse(result_type=\"markdown\").load_data(\"example5\")"
       ],
       "metadata": {
         "colab": {
